fim texto frances

--- a/EN/tuto01/tuto.tex
+++ b/EN/tuto01/tuto.tex
@@ -18,7 +18,7 @@
 \def \mytitle{A new ally against cancer} % Big title
 \def \mysubtitle{Tutorial english class - Second Semester of 2011 } % subtitle
 \def \ttauth{Tiago Chedraoui Silva} % author's name
-\def \ttxt{Rack: 214 } % Extra text right side of name
+\def \ttxt{Pigeonhole: 214 } % Extra text right side of name
 \def \ttdate{November 3, 2011} % date
 
 \begin{document}
