--- a/FLE/devoir3/lettre.tex
+++ b/FLE/devoir3/lettre.tex
@@ -1,51 +1,23 @@
-\documentclass[11pt]{article}
+\documentclass[a4paper,11pt]{article}
 
-\usepackage[french]{babel}
-\usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}   
-\usepackage{ae,aecompl,aeguill}  % pdfs plus beaux =)
-\usepackage{lmodern}
-\usepackage{marvosym}
-\usepackage{ifpdf}
-\ifpdf
-  \usepackage[pdftex]{graphicx}
-\else
-  \usepackage[dvips]{graphicx}\fi
+\usepackage[french,listings,algo]{tcs}
 
-\pagestyle{empty}
+% Cover %
+\def \ttprofname{Isabelle Lallemand} % teachers name
+\def \ttabrv{FLE804 } % abbreviation of names class
+\def \ttabrvxt{Cycle d'harmonisation } % period
+\def \mytitle{Peut-on réformer l'université sans toucher aux grandes écoles ?} % Big title
+\def \mysubtitle{FLE Avancé - Deuxième semestre de 2011} % subtitle
+\def \ttauthi{Tiago Chedraoui Silva} % author's name
+\def \ttxti{Casier: 214 } % Extra text right side of name
+\def \ttdate{Novembre 15, 2011} % date
 
-\usepackage[scale=0.8]{geometry}
-\setlength{\parindent}{0pt}
-\addtolength{\parskip}{6pt}
+\spc{2} % double spacing
 
-\def\firstname{Tiago}
-\def\familyname{Chedraoui Silva}
-\def\FileAuthor{\firstname \familyname}
-\def\FileTitle{\firstname \familyname's cover letter}
-\def\FileSubject{Cover letter}
-\def\FileKeyWords{\firstname \familyname, Cover letter}
-
-\usepackage{url}
-\renewcommand{\ttdefault}{pcr}
-\urlstyle{tt}
-\ifpdf
-  \usepackage[pdftex,pdfborder=0,breaklinks,baseurl=http://,pdfpagemode=None,pdfstartview=XYZ,pdfstartpage=1]{hyperref}
-  \hypersetup{
-    pdfauthor   = \FileAuthor,%
-    pdftitle    = \FileTitle,%
-    pdfsubject  = \FileSubject,%
-    pdfkeywords = \FileKeyWords,%
-    pdfcreator  = \LaTeX,%
-    pdfproducer = \LaTeX}
-\else
-  \usepackage[dvips]{hyperref}
-\fi
-
-\renewcommand{\familydefault}{\sfdefault}% for use with a résumé using sans serif fonts;
-%\renewcommand{\familydefault}{\rmdefault}% for use with a résumé using sans serif fonts;
 
 \begin{document}
-
+\titleTMB 
+\newpage
 
 % - - - - - - - - - - - - - - - 
 % Texto estruturado em frances
@@ -70,5 +42,43 @@
 
 % D'une part, d'autre part
 
+
+Premièrement, la France, en ayant un système d'enseignement supérieur très différent des autres, doit l'expliquer a toute le monde. Au même temps, ce système n'est pas parfait et tous ses problèmes sont discutés dans la société française.
+La première chose qui fait ce système différent, c'est la division paradoxale entre les Universités et les grandes écoles.
+D'une part, il y a l'Université, dont le but est de forme les chercheurs, des personnes avec une connaissance plus généralistes et, comme a dit Olivier Beaud (professeur de droit public à l’Université Panthéon-Assas)  honnêtes hommes et de bons citoyens.
+D'autre part, avec une bonne réputation si comparée a une Université, il y a les
+Grandes École qui sont  plus proche de les entreprises, et dont  le but c'est de
+préparer les personnes pour le marché de travail.
+
+En plus, l'Université, selon, Olivier, est toujours une deuxième option des les étudiants, parce qu'elle est déconsidérée pour raisons historiques. A cause de cela,  les étudiants veulent être acceptés aux Grandes Écoles, mais si ils ne sont  pas, ils étudieront dans l'Université; et le problème va être la motivation, puisqu'ils vont étudier où ils ne veulent pas, donc ils seront démotivés.
+Par   ailleurs,   l'université  souffre   d'une   hétérogénéité  des   étudiants
+gigantesque, et cela  provoque une grande difficulté pour  travailler pendant le
+cours.
+
+Ainsi, en essayant de changer le système des université à cause de la mauvaise réputation, une loi de 2007 a essayer de changer ce scénario, cependant, un des fondateurs du « Collectif pour la défense de l’Université », M.Olivier Beaud, défend que le problème n'est pas l'université, mais le système française. Il dit que l’université doit avoir le droite de choisir aussi les étudiantes, parce que aujourd'hui elle est une voiture-balai, cela veut dire, qu'elle accepte presque toute le monde qui a besoin d'un enseignement supérieur. Mais, l'université ne peut pas accepter de personnes que ne sont pas prépares.
+
+Finalement, quelques idées ont été proposés, par exemple, Jean Arrous (professeur à l'université de Strasbourg), a propos que les grandes écoles deviennent des instituts d'université spécialisés rattachés aux universités; et que les instituts spécialisés ne sont ouverts qu'à des candidats pourvus d'une licence qu'ils auront préparée dans une université. Mais, cela n'est pas défendu par toute le monde, car les Universités vont être le prépas pour les Grande Écoles, et l'idée d'une Université n'est pas cela.
+
+
+
+
+On peut conclure que le système française est unique, mais, même les françaises doutent si le système est parfait.
+Il y aura beaucoup de discutions avant d'avoir une quelque changement dans le système. On espère que quand le changement arriver, ce ne sera pas trop tard pour récupérer le prestige française.
+
+
+%En plus, 
+%Premièrement, la  connaissance du système éducatif française  doit être fait,
+%parce que  ce système est  très different si  comparée au reste du  monde. D'une
+%part on a l'Université qui le but est de forme les chercheurs a une mauvaise réputation si comparée a une Grande École.
+
+%monsieur Olivier Beaud 
+%Université déconsideré pour raisons historiques
+%publiques heterogenes;
+
+
+%On essaie les grandes écoles, si on ne réussi pas, on essie une filier courts du
+%secteur privees qui ne
+%assurer pas  unne   bonne  formation,  après  cela  on   a  le  Déuxième  choix,
+%L'universoté; l'étudiant entre déjà démotivante. 
 
 \end{document}
